@@ -1,5 +1,6 @@
 2.1
   - Windows: fix bug introduced in 2.0 when std_out = FALSE
+  - Support std_in = FALSE to restore old behavior of an unreadable stdin (for rtika)
 
 2.0
   - Breaking change on Windows: the exec functions now automatically convert
